Fix cursor on mobile - hide on touch devices

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   --color-line: #e5e5e5;
 }
 
+@media (hover: hover) and (pointer: fine) {
+  * { cursor: none; }
+}
+
 body {
   background-color: #ffffff;
   color: #000000;
